templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: k8s-ingress
spec:
 rules:
  - host: docker-registry
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
  - host: chart-repo
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-env-chartmuseum
          servicePort: 8080
