templates/otherIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: k8s-chartmuseum-ingress
spec:
 rules:
  - host: chart-repo
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-env-chartmuseum
          servicePort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: k8s-k8s-dashboard-ingress
spec:
 rules:
  - host: k8s-dashboard
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-env-kubernetes-dashboard
          servicePort: 443
